# rinse-cli

./: CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: DESIGN.md
src/: main.rs
tools/: fake_icecast.py  test.aac
